Prøver litt forskjellige playwright configer og reporters

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@cucumber/cucumber": "^11.0.1",
     "@cucumber/pretty-formatter": "^1.0.1",
     "@playwright/test": "^1.48.2",
+    "chai": "^5.1.2",
     "playwright": "^1.48.2"
   }
 }
